tests/builtins/errors/input_wrong_type.orus
fn main() {
    input(123)
}
